[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = 1

[workspace.dependencies]
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
arrayvec = "0.7.4"
async-stream = "0.3"
base64 = "0.21"
bitflags = "2"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "^0.4.24", features = ["serde"]}
combine = "4"
compact_str = { version = "0.7", features = ["serde"] }
crossbeam = "0.8"
cross-krb5 = { version = "0.4", default-features = false }
digest = "0.10"
dirs = "5"
diligent-date-parser = "0.1.4"
enumflags2 = "0.7"
env_logger = "0.11"
fs3 = "0.5"
futures = "0.3"
futures-util = "0.3"
fxhash = "0.2"
globset = "0.4"
hdrhistogram = "7"
if-addrs = "0.10"
immutable-chunkmap = "2"
indexmap = "2"
keyring = "2"
lazy_static = "1"
log = "0.4"
memmap2 = "0.7.1"
num_cpus = "1"
once_cell = "1.17.2"
packed_struct = "0.10"
packed_struct_codegen = "0.10"
parking_lot = "0.12.1"
pin-utils = "0.1"
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
radix_trie = "0.2"
rand = "0.8.5"
rayon = "1"
regex = "1"
rust_decimal = { version = "1",  features = ["serde-with-float", "serde-with-str", "serde-with-arbitrary-precision"] }
rustls = "0.21"
rustls-pemfile = "1"
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
sha3 = "0.10"
sled = { version = "0.34" }
smallvec = { version = "1", features = ["const_generics", "union"] }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "fs", "sync", "process", "macros", "signal", "io-std"] }
tokio-rustls = "0.24"
triomphe = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
warp = { version = "0.3", features = ["tls"] }
webpki = "0.22"
x509-parser = "0.15"
zstd = { version = "0.12.3", features = ["zstdmt"] }

[workspace]
resolver = "2"
members = [
    "netidx",
    "netidx-core",
    "netidx-derive",
    "netidx-netproto",
    "netidx-protocols",
    "netidx-tools",
    "netidx-tools-core",
    "netidx-wsproxy"
]
exclude = ["test-harness"]
